Backend URL updated

--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "proxy":"https://raiot-b91o.onrender.com",
+  "proxy":"https://raiot-1.onrender.com",
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
